# net.lugsole.bible_gui

./: LICENSE  README.md  meson.build  net.lugsole.bible_gui.Devel.json  net.lugsole.bible_gui.json
.github/workflows/: main.yml
data/: meson.build  net.lugsole.bible_gui.appdata.xml.in  net.lugsole.bible_gui.desktop.in  net.lugsole.bible_gui.desktop.in.in  net.lugsole.bible_gui.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: Audio_Player.py  Bible.py  Bible_Parser.py  Bible_Parser_Base.py  Bible_Parser_spb.py  Bible_Parser_sqlite.py  Bible_Parser_tsv.py  Bible_Parser_xml.py  bible.gresource.xml  bible.gresource.xml.in  bible.in  bible_selector.in  config.py.in  main.py  meson.build  mybible_to_markdown.py  mybible_to_markdown_new.py  path_order.py  settings.py  settings.ui  text_rendering.py  text_rendering.ui  tts.py  window.py  window.ui
