


install_data('net.lugsole.bible_gui.svg',
  rename: application_id+'.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'))


install_data('net.lugsole.bible_gui-symbolic.svg',
  rename: application_id+'-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'symbolic', 'apps'))

